<?xml version="1.0" encoding="utf-8"?>

<!--
  ~  Copyright © 2018-present, MNK Group. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_checkout"
    tools:context="com.themedimension.ivoryshop.android.activities.checkout.CheckoutActivity">


    <include
        android:id="@+id/cart_toolbar"
        layout="@layout/toolbar_cart_activity" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_toolbar"
        android:layout_above="@+id/continue_layout"
        android:background="@color/background_fc_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/table_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_small_margin"
                android:layout_marginTop="@dimen/button_small_margin"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/button_small_margin"
                    android:layout_marginTop="@dimen/button_small_margin"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/layout_large_margin"
                    android:paddingLeft="@dimen/layout_large_margin"
                    android:paddingRight="@dimen/layout_large_margin"
                    android:paddingStart="@dimen/layout_large_margin"
                    android:text="@string/product"
                    android:textStyle="bold"
                    android:textColor="@color/material_drawer_secondary_text"
                    android:textSize="@dimen/small_layout_textSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/button_small_margin"
                    android:layout_marginTop="@dimen/button_small_margin"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/color"
                    android:textColor="@color/material_drawer_secondary_text"
                    android:textSize="@dimen/small_layout_textSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/button_small_margin"
                    android:layout_marginTop="@dimen/button_small_margin"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/size"
                    android:textColor="@color/material_drawer_secondary_text"
                    android:textSize="@dimen/small_layout_textSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/button_small_margin"
                    android:layout_marginTop="@dimen/button_small_margin"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/qty"
                    android:textColor="@color/material_drawer_secondary_text"
                    android:textSize="@dimen/small_layout_textSize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/button_small_margin"
                    android:layout_marginTop="@dimen/button_small_margin"
                    android:layout_weight="2.25"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/filter_price"
                    android:textColor="@color/material_drawer_secondary_text"
                    android:textSize="@dimen/small_layout_textSize" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/checkout_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_large_margin"
                android:background="@color/background_white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_large_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/checkoutCartPrice"
                        android:layout_toStartOf="@+id/checkoutCartPrice"
                        android:text="@string/cart_price"
                        android:textColor="@color/text_black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/checkoutCartPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/dollar_currency_string"
                        android:textColor="@color/text_black"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_fc_grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_white"
                    android:padding="@dimen/layout_large_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/sales_discount"
                        android:layout_toStartOf="@+id/sales_discount"
                        android:text="@string/discount"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sales_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/dollar_currency_string"
                        android:textColor="@color/text_black"
                        android:textStyle="bold" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background_fc_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_white"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/layout_small_margin"
                    android:paddingLeft="@dimen/layout_large_margin"
                    android:paddingRight="@dimen/layout_large_margin"
                    android:paddingTop="@dimen/layout_small_margin"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/coupon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="@string/coupon"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enter_cupon_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:backgroundTint="@color/background_fc_grey"
                        android:hint="@string/coupon_code"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/text_medium_grey"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/checkoutCupon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:gravity="end"
                        android:text="@string/dollar_currency_string"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_small_margin"
                android:layout_marginTop="@dimen/layout_large_margin"
                android:background="@color/background_white"
                android:orientation="horizontal"
                android:padding="@dimen/layout_large_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/checkout_price"
                    android:layout_toStartOf="@+id/checkout_price"
                    android:text="@string/checkout_price"
                    android:textAllCaps="true"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/medium_layout_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/checkout_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/dollar_currency_string"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/medium_layout_textSize"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/continue_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/layout_small_margin"
        android:paddingLeft="@dimen/layout_large_margin"
        android:paddingRight="@dimen/layout_large_margin"
        android:paddingTop="@dimen/layout_small_margin">

        <Button
            android:id="@+id/go_to_delivery"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/green_button_selector"
            android:text="@string/continue_to_delivery_details"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/text_white"
            android:textSize="@dimen/medium_layout_textSize"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>

