<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright © 2018-present, MNK Group. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/simple_toolbar_layout" />

    <ImageView
        android:id="@+id/csLoginImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_imageview_marginTop"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_placeholder"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/layout_large_margin">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_greenButton_height"
            android:layout_marginBottom="@dimen/layout_small_margin"
            android:backgroundTint="@color/navigation_buttons_green"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/passwordEditText"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_medium_grey"
            android:textSize="@dimen/medium_layout_textSize" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_greenButton_height"
            android:layout_marginBottom="@dimen/layout_small_margin"
            android:backgroundTint="@color/navigation_buttons_green"
            android:ems="10"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/login_button"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_medium_grey"
            android:textSize="@dimen/medium_layout_textSize" />

        <Button
            android:id="@+id/login_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_greenButton_height"
            android:layout_marginBottom="@dimen/layout_large_margin"
            android:background="@drawable/green_button_selector"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="@dimen/medium_layout_textSize" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_large_margin"
            android:layout_marginTop="@dimen/layout_large_margin"
            android:text="@string/forgot_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_layout_textSize"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>