<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright © 2018-present, MNK Group. All rights reserved.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textured_background"
    android:orientation="vertical"
    android:padding="@dimen/layout_large_margin">


    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:drawablePadding="-20dp"
        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
        android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
        android:text="@string/skip"
        android:textColor="@color/background_black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skipButton"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1.8"
            android:contentDescription="@null"
            android:src="@drawable/avatar_area" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_button"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_small_margin"
                android:background="@drawable/green_button_selector"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="@dimen/medium_layout_textSize" />


            <Button
                android:id="@+id/buttonRegister"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_small_margin"
                android:background="@drawable/purple_button_selector"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="@dimen/medium_layout_textSize" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>